--- a/src/Core/MiniEProject.Application/MiniEProject.Application.csproj
+++ b/src/Core/MiniEProject.Application/MiniEProject.Application.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MiniEProject.Domain\MiniEProject.Domain.csproj" />
   </ItemGroup>
 
