--- a/src/Infrastructure/MiniEProject.Persistence/MiniEProject.Persistence.csproj
+++ b/src/Infrastructure/MiniEProject.Persistence/MiniEProject.Persistence.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\MiniEProject.Application\MiniEProject.Application.csproj" />
   </ItemGroup>
 
