--- a/src/Presentation/MiniEProject.WebApi/appsettings.json
+++ b/src/Presentation/MiniEProject.WebApi/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        },
+        "ConnectionStrings": {
+            "Default": null,
+            "ConnectionStrings": {
+                "Default": "Server=DESKTOP-5U193IM;Database=MiniProject;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+            }
+
+        }
+    },
   "AllowedHosts": "*"
 }
