Dersde yazdiqlarim+Role

--- a/src/Core/MiniEProject.Application/MiniEProject.Application.csproj
+++ b/src/Core/MiniEProject.Application/MiniEProject.Application.csproj
@@ -7,15 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstracts\Repositories\" />
-    <Folder Include="Abstracts\Services\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Validations\" />
+    <Folder Include="DTOs\FavouriteDtos\" />
+    <Folder Include="DTOs\ReviewDtos\" />
+    <Folder Include="DTOs\OrderProductDtos\" />
+    <Folder Include="DTOs\OrderDtos\" />
+    <Folder Include="DTOs\UserDtos\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.17">
       <PrivateAssets>all</PrivateAssets>
