--- a/src/Presentation/MiniEProject.WebApi/appsettings.json
+++ b/src/Presentation/MiniEProject.WebApi/appsettings.json
@@ -1,16 +1,12 @@
 {
+    "ConnectionStrings": {
+        "Default": "Server=DESKTOP-5U193IM;Database=MiniProjectDb;Integrated Security=True;TrustServerCertificate=True"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
-        },
-        "ConnectionStrings": {
-            "Default": null,
-            "ConnectionStrings": {
-                "Default": "Server=DESKTOP-5U193IM;Database=MiniProject;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-            }
-
         }
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
