--- a/src/Presentation/MiniEProject.WebApi/MiniEProject.WebApi.csproj
+++ b/src/Presentation/MiniEProject.WebApi/MiniEProject.WebApi.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -24,10 +28,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\MiniEProject.Infrastructure\MiniEProject.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\MiniEProject.Persistence\MiniEProject.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
