--- a/src/Presentation/MiniEProject.WebApi/appsettings.json
+++ b/src/Presentation/MiniEProject.WebApi/appsettings.json
@@ -8,5 +8,19 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "JwtSettings": {
+        "SecretKey": "A6g!LpVx#Tb3Kq9Rz$YeMn@Dw2UjXcBoFiHsZpWvNjCmLaEtGrQxJsKa",
+        "Issuer": "https://localhost:7239",
+        "Audience": "https://localhost:7239",
+        "ExpiryMinutes": 60
+    },
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587,
+        "SenderName": "MiniProject",
+        "SenderEmail": "zulaoyuncusu00@gmail.com",
+        "Password": "nmmf mqvd icbt adwq"
+    },
+
     "AllowedHosts": "*"
 }
