--- a/src/Infrastructure/MiniEProject.Persistence/MiniEProject.Persistence.csproj
+++ b/src/Infrastructure/MiniEProject.Persistence/MiniEProject.Persistence.csproj
@@ -10,9 +10,11 @@
     <PackageReference Include="AutoMapper" Version="15.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.3" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.17">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -31,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\MiniEProject.Application\MiniEProject.Application.csproj" />
+    <ProjectReference Include="..\MiniEProject.Infrastructure\MiniEProject.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
